@@ -1,3 +1,6 @@
+Changelog 0.3.30 [20230224]:
+- Updated The News
+
 Changelog 0.3.29 [20230223]:
 - Added New Duration Setting for Intro Dialog
 
